--- a/cartão de visualização/card.html
+++ b/cartão de visualização/card.html
@@ -42,6 +42,6 @@
 
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://github.com/VictorManoel10">Victor Fossey</a>.
+        Coded by <a target="_blank" href="https://github.com/VictorManoel10">Victor Fossey</a>.
 </body>
 </html>
